added base activity and baseviwemodel. and enable viewBinding.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">KotlinNewsApplication</string>
     <string name="news_activity_name">Kotlin News</string>
+    <string name="news">News</string>
 </resources>
